--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/lumen/bootstrap.min.css" />
   <!-- FONTAWESOME -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <title>{% block page_title %}{% endblock %}</title>
 </head>
 
@@ -18,7 +20,7 @@
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">UnicornAttractor</a>
 
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto user-nav">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'home' %}">Login</a>
         </li>
@@ -31,7 +33,7 @@
 
 
       <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto main-nav">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -40,7 +42,7 @@
             Tell Us About It!
             </a>
             <div class="dropdown-menu" aria-labelledby="Issue Tracker">
-              <a class="dropdown-item" href="#">What's This?</a>
+              <a class="dropdown-item" href="{% url 'tracker_home' %}">What's This?</a>
               <a class="dropdown-item" href="#">Report Bug</a>
               <a class="dropdown-item" href="#">Suggest a Feature</a>
               <div class="dropdown-divider"></div>
@@ -51,7 +53,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active text-light" href="#">
+            <a class="nav-link" href="#">
               <i class="fas fa-shopping-cart"></i> Cart
               <label class="badge badge-warning">2</label>
             </a>
@@ -62,6 +64,10 @@
   </nav>
 
   {% block content %}{% endblock %}
+  
+  <footer class="bg-primary">
+    
+  </footer>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
