Added 'accounts' app and logout view

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
       <ul class="navbar-nav mr-auto user-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Login</a>
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
       </ul>
 
