Created login form, styled with django-forms-bootstrap, and edited nav for logged in and logged out users

--- a/pages/templates/issuetracker.html
+++ b/pages/templates/issuetracker.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block page_title %}Issue Tracker{% endblock %}
 
-{% block content %}
+{% block hero %}
 
-<h1>Issue Tracker Page</h1>
+<div class="col-md-6">
+   <h1>Issue Tracker!</h1> 
+</div>
 
 {% endblock %}
