--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,8 +1,29 @@
 {% extends 'base.html' %}
+{% load bootstrap_tags %} 
 {% block page_title %}User Login{% endblock %}
 
+{% block hero %}
+
+<div class="col-md-6">
+   <h1>Log Me In!</h1> 
+</div>
+
+{% endblock %}
+
 {% block content %}
-
-<h1>Log Me In!</h1>
-
+<section class="form">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-6 mx-auto">
+          
+          <form method="POST">
+          {% csrf_token %}
+          {{ login_form | as_bootstrap }}
+          <button class="btn btn-primary right"  type="submit">Login</button>
+          </form>
+          
+        </div>
+      </div>
+    </div>
+</section>
 {% endblock %}
