--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block page_title %}Home Page{% endblock %}
 
-{% block content %}
 
-<h1>Testing Home Page</h1>
+{% block hero %}
+
+<div class="col-md-6">
+   <h1>Home Page</h1> 
+</div>
 
 {% endblock %}
