--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,16 @@
 
       <ul class="navbar-nav mr-auto user-nav">
         {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="Issue Tracker">
+              <a class="dropdown-item" href="{% url 'tracker_home' %}">My Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+            </div>
+          </li>
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
@@ -49,10 +56,16 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="Issue Tracker">
               <a class="dropdown-item" href="{% url 'tracker_home' %}">What's This?</a>
+              {% if user.is_authenticated %}
               <a class="dropdown-item" href="#">Report Bug</a>
               <a class="dropdown-item" href="#">Suggest a Feature</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Buy Tokens</a>
+              {% else %}
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+              <a class="dropdown-item" href="#">Register</a>
+              {% endif %}
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">How We're Doing</a>
             </div>
@@ -68,6 +81,22 @@
       </div>
     </div>
   </nav>
+  
+  <section class="hero">
+    <div class="container">
+      {% if messages %}
+      <div class="row">
+        <div class="col-sm-12">
+          {% for message in messages %} {{ message }} {% endfor %}
+        </div>
+      </div>
+      {% endif %}
+      
+      <div class="row">
+        {% block hero %}{% endblock %}
+      </div>
+    </div>
+  </section>
 
   {% block content %}{% endblock %}
   
