--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -19,9 +19,18 @@
           <form method="POST">
           {% csrf_token %}
           {{ login_form | as_bootstrap }}
-          <button class="btn btn-primary right"  type="submit">Login</button>
+          <button class="btn btn-lg btn-primary float-right"  type="submit">Login</button>
           </form>
           
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="col-sm-8 col-md-6 mx-auto">
+          <p class="text-center">
+          Not Regestered?
+          <a href="{% url 'register' %}">Register Here</a>
+          </p>
         </div>
       </div>
     </div>
