--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -26,12 +26,18 @@
       </div>
       
       <div class="row">
-        <div class="col-sm-8 col-md-6 mx-auto">
+        <div class="col-sm-6 mx-auto">
           <p class="text-center">
           Not Regestered?
           <a href="{% url 'register' %}">Register Here</a>
           </p>
+          
+          <p class="text-center">
+          Forgot Password?
+          <a href="{% url 'password_reset' %}">Reset Password</a>
+          </p>
         </div>
+
       </div>
     </div>
 </section>
