--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,8 @@
       </ul>
 
       <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <span class="navbar-toggler-icon"></span>
+      </button>
 
 
 
@@ -60,7 +60,7 @@
               <a class="dropdown-item" href="#">Report Bug</a>
               <a class="dropdown-item" href="#">Suggest a Feature</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Buy Tokens</a>
+              <a class="dropdown-item" href="{% url 'products' %}">Buy UniCoins</a>
               {% else %}
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'login' %}">Login</a>
