--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'home' %}">UnicornAttractor</a>
+      <a class="navbar-brand" href="{% url 'home' %}"><span class="d-none d-sm-inline">UniAttractor </span><img src="{{ MEDIA_URL }}images/unicorn.png" style="height:24px; width:34px;"></a>
 
       <ul class="navbar-nav mr-auto user-nav">
         {% if user.is_authenticated %}
@@ -78,6 +78,13 @@
               <i class="fas fa-shopping-cart"></i> Cart
               <label class="badge badge-warning">{{ product_count }}</label>
             </a>
+          </li>
+          
+          <li class="nav-item">
+            
+              <img src="{{ MEDIA_URL }}images/unicoin.png" style="height:34px; width:34px; position:relative; top:4px;">
+              <label class="badge badge-warning" style="position:relative; top:5px;">{{ token_total }}</label>
+            
           </li>
         </ul>
       </div>
