--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -17,7 +17,7 @@
         <div class="col-sm-8 col-md-6 mx-auto">
           <p>Date Joined: {{ profile.date_joined }}</p>
           
-          <p>UniCoins Left: </p>
+          <p>UniCoins Left: {{ token_total }}</p>
         </div>
         
         
