--- a/issues/templates/reportbug.html
+++ b/issues/templates/reportbug.html
@@ -14,7 +14,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
+        <h2>Report A Bug</h2>
         
+        <form method="POST">
+        {% csrf_token %}
+        {{ form | as_bootstrap }}
+        <button type="submit" class="btn btn-lg btn-primary">Report That Bug!</button>
+        </form>
       </div>
     </div>
   </div>
