--- a/issues/templates/bugdetail.html
+++ b/issues/templates/bugdetail.html
@@ -14,6 +14,10 @@
     <div class="row">
       <div class="col-sm-12">
         <p>{{ bug.description }}</p>
+        
+        <p>Score: {{ bug.score }}</p>
+        
+        <a href="{% url 'upvote_bug' bug.id %}" class="btn btn-lg btn-success">Upvote</a>
       </div>
     </div>
   </div>
