--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,10 +11,21 @@ html {
 body {
     font-size: 1rem;
     font-weight: 600;
+    color: #616161!important;
+    padding-bottom: 150px;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
+}
+
+section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.alert {
+    border-radius: 0;
 }
 
 .main-nav li label {
@@ -35,16 +46,62 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link:focus {
     color: #fff;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
+}
+
+/*HEROS*/
+section.hero {
+    background: rgb(247,41,255);
+    background: linear-gradient(90deg,
+                rgba(253,29,29,.6) 0%,
+                rgba(247,41,255,.6) 34%,
+                rgba(41,148,255,.7) 68%,
+                rgba(161,41,255,.6) 85%);
+    min-height: 200px;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+}
+
+.home-hero-box {
+    border: dashed 4px #fff;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+.home-hero-box .found {
+    padding: 30px;
 }
 
 
+
+/*HOME PAGE*/
+
+section.features {
+    background-color: rgba(161, 41, 255, 0.6);
+    color: #fff;
+}
+
+.features .feature {
+    padding-bottom: 24px;
+}
+
+.feature i {
+    font-size: 30px;
+    margin-bottom: 12px;
+}
+
+section.home-cta h3 {
+    margin-bottom: 24px;
+}
+
 footer {
+    padding-top: 50px;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    min-height: 100px;
+    height: 150px;
     border-style: solid;
     border-width: 4px 1px 0px 1px;
 }
