--- a/templates/base.html
+++ b/templates/base.html
@@ -74,10 +74,15 @@
           </li>
 
           <li class="nav-item">
+            {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'view_cart' %}">
+            {% else %}
+            <a class="nav-link disabled">
+            {% endif %}
               <i class="fas fa-shopping-cart"></i> Cart
               <label class="badge badge-warning">{{ product_count }}</label>
             </a>
+            
           </li>
           
 
@@ -90,27 +95,32 @@
     </div>
   </nav>
   
+  {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-dismissable alert-{{ message.tags }} mb-0 text-center">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>{{ message }}</strong>
+    </div>
+    {% endfor %}
+  {% endif %}
+  
   <section class="hero">
     <div class="container">
-      {% if messages %}
       <div class="row">
-        <div class="col-sm-12">
-          {% for message in messages %} {{ message }} {% endfor %}
-        </div>
-      </div>
-      {% endif %}
-      
-      <div class="row">
+
         {% block hero %}{% endblock %}
       </div>
     </div>
   </section>
+  
+  
 
   {% block content %}{% endblock %}
   
-  <!--<footer class="bg-primary">-->
-    
-  <!--</footer>-->
+  <footer class="bg-primary text-center text-white">
+    <h4>UnicornAttractor <img src="{{ MEDIA_URL }}images/unicorn.png" style="height:24px; width:34px;"></h4>
+    <p><i class="far fa-copyright"></i> 2018</p>
+  </footer>
 
 
 
