Added tickets to issue tracker home and styled them

--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -94,7 +94,7 @@
         
         <p>Just click that big button below and your wish is our command</p>
         
-        <a href="{% url 'tracker_home' %}" class="btn btn-lg btn-success">Go To Issue Tracker</a>
+        <a href="{% url 'tracker_home#' %}" class="btn btn-lg btn-success">Go To Issue Tracker</a>
       </div>
     </div>
   </div>
