--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
 
           <li class="nav-item">
               <img src="{{ MEDIA_URL }}images/unicoin.png" style="height:34px; width:34px; position:relative; top:4px;">
-              <label class="badge badge-warning" style="position:relative; top:5px;">{{ token_total }}</label>
+              <label id="token-total" class="badge badge-warning" style="position:relative; top:5px;">{{ token_total }}</label>
           </li>
         </ul>
       </div>
