--- a/issues/templates/suggestfeature.html
+++ b/issues/templates/suggestfeature.html
@@ -4,7 +4,7 @@
 
 
 {% block hero %}
-<div class="col-md-6">
+<div class="col-md-12 text-center">
   <h1>Help Us Improve, Suggest A Feature</h1>
 </div>
 {% endblock %}
@@ -13,7 +13,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-8 mx-auto">
         <h2>Suggest A Feature</h2>
         
         <form method="POST">
